# cpp-iso-converter

./: .gitignore  CMakeLists.txt  README.md  ciso2iso.sln  ciso2iso.vcxproj
.github/workflows/: build.yml  commit-lint.yml  release.yml
docs/superpowers/plans/: 2026-04-17-ciso2iso.md  2026-04-18-release-automation.md
docs/superpowers/specs/: 2026-04-17-ciso2iso-design.md  2026-04-18-release-automation-design.md
scripts/: release.ps1  release.sh
src/: ciso.cpp  ciso.h  main.cpp
tests/: README.md  invalid_magic.cso  smoke.ps1  smoke.sh
